# Treasury

./: .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  server.js  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts
backend/: Cargo.toml
backend/server/: types.ts
backend/server/database/: database.ts
backend/server/middleware/: auth.ts
backend/server/routes/: cdn.ts
backend/server/routes/api/: account.ts  downloads.ts  filesystem.ts  login.ts  uploads.ts
backend/server/utility/: rateLimiters.ts
backend/src/: api.rs  app_state.rs  config.rs  constants.rs  database.rs  html.rs  main.rs  shell.rs  util.rs
backend/src/api/: account.rs  auth.rs  cdn.rs  downloads.rs  filesystem.rs  formats.rs  general.rs  mod.rs  multipart.rs  uploads.rs  util.rs  validation.rs
backend/src/api/api_utils/: download_utils.rs  mod.rs  upload_utils.rs
backend/src/api/utils/: auth_utils.rs  download_utils.rs  mod.rs  upload_utils.rs
backend/src/storage/: file_store.rs
docs/: formats.md  internals.md
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.html  index.tsx
scripts/: install.ps1  run.ps1  start.sh
server/: app.ts  authentication.ts  classes.ts  cli.ts  commands.ts  database.ts  env.ts  index.ts  logging.ts  server.js  server.ts  serverCrypto.ts  transfers.ts  types.ts
server/database/: database.ts
server/middleware/: auth.ts  authentication.ts
src/: App.jsx  App.tsx  index.css
tests/: tests.ts
video/: video.m3u8
(+146 files in other folders)
