[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.7.5", features = ["multipart"] }
axum-util = "0.2.2"
base64 = "0.22.1"
blake3 = "1.5.1"
bytesize = "1.3.0"
clap = { version = "4.5.4", features = ["cargo"] }
console = "0.15.8"
ctrlc = "3.4.4"
dashmap = "6.0.1"
dialoguer = "0.11.0"
dotenvy = "0.15.7"
env_logger = "0.11.3"
hex = "0.4.3"
http = "1.1.0"
lazy_static = "1.4.0"
log = "0.4.21"
nanoid = "0.4.0"
num-format = "0.4.4"
path-absolutize = "3.1.1"
regex = "1.10.4"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = "1.0.202"
serde_json = "1.0.117"
serde_valid = "0.21.0"
serde_with = { version = "3.8.1", features = ["base64"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread", "fs", "io-util", "signal"] }
tokio-util = "0.7.11"
tower-http = { version = "0.5.2", features = ["fs", "cors", "compression-gzip"] }
tower-sessions = { version = "0.12.2", features = ["signed"] }
